fixed .page-header margin on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -161,7 +161,8 @@ small {
 -------------------------------- */
 
 .page-header {
-  margin-top: -50px;
+  margin-top: -60px;
+  margin-bottom: -30px;
   padding-top: 50px;
   padding-bottom: 20px;
   background: url(../img/clownfish.jpg) no-repeat;
@@ -294,6 +295,7 @@ label small {
 	
   .page-header {
 	  margin-top: -50px;
+	  margin-bottom: 0;
 	  padding-top: 200px;
 	  padding-bottom: 50px; 
 	  
